--- a/Front/src/tpl/flow-edit.html
+++ b/Front/src/tpl/flow-edit.html
@@ -12,8 +12,8 @@
         'cs-is-deleted': rule.isDeleted
         }">
         <span ng-click="toggleExpand(rule)">
-          <!--           <i class="material-icons md-mini cs-arrow-right">keyboard_arrow_right</i>
-          -->         <i class="material-icons md-mini cs-arrow-down flow-arrow-down" ng-click="stretchList(type)">keyboard_arrow_down</i>
+          <i class="material-icons md-mini cs-flow-arrow" ng-show="rule.unexpanded">keyboard_arrow_right</i>
+          <i class="material-icons md-mini cs-flow-arrow" ng-hide="rule.unexpanded">keyboard_arrow_down</i>
         </span>
         <span class="cs-path-name">
           <i class="material-icons tree-icon">album</i>
@@ -21,7 +21,7 @@
         </span>
 
       </div>
-      <ul>
+      <ul ng-hide="rule.unexpanded">
         <li ng-repeat="path in rule.paths" class="tree-li" ng-click="editPath(rule, path)" ng-class="{
           'cs-flow-active': onEdit=='path' && curPath==path,
           'cs-is-deleted': path.isDeleted
@@ -47,28 +47,18 @@
   </div>
   <div class="col-sm-8 col-md-8 cs-flow-content">
     <div class="cs-flow-top-actions">
-      <div ng-show="onEdit=='rule' && !isDeleted"  class="top-btn-list">
-        <button class="btn btn-danger" ng-click="deleteRule()">
+      <div ng-hide="isDeleted || onEdit=='flow'" class="top-btn-list">
+        <button class="btn btn-danger" ng-click="deleteCurrent(onEdit)">
           <i class="material-icons">delete</i>
-          Delete rule
+          {{'Delete '+onEdit}}
         </button>
-        <button class="btn btn-default" ng-click="duplicateRule()">
+        <button class="btn btn-default" ng-click="duplicateCurrent(onEdit)">
           <i class="material-icons">control_point_duplicate</i>
-          Duplicate rule
-        </button>
-      </div>
-      <div ng-show="onEdit=='path' && !isDeleted" class="top-btn-list">
-        <button class="btn btn-danger" ng-click="deletePath()">
-          <i class="material-icons">delete</i>
-          Delete path
-        </button>
-        <button class="btn btn-default" ng-click="duplicatePath()">
-          <i class="material-icons">control_point_duplicate</i>
-          Duplicate path
+          {{'Duplicate '+onEdit}}
         </button>
       </div>
       <div ng-show="isDeleted" class="top-btn-list">
-        <button class="btn btn-success" ng-click="restore()">
+        <button class="btn btn-success" ng-click="restore(onEdit)">
           <i class="material-icons">restore</i>
           Restore
         </button>
