add campaign impPixelUrl params

--- a/Front/src/index.html
+++ b/Front/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="app" ng-controller="MainCtrl">
 <head>
-    <title ng-bind="app.name + ' - ' + app.subtitle">AdBund SSP</title>
+    <title ng-bind="app.name + ' - ' + app.subtitle">AdBund AdClick</title>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
