--- a/Front/src/tpl/campaign-edit-dialog.html
+++ b/Front/src/tpl/campaign-edit-dialog.html
@@ -31,14 +31,14 @@
                     </md-button>
                 </div>
             </div>
-            <div class="form-group" ng-show="impPixelUrl==1">
+            <div class="form-group" ng-show="impTracking==1">
                 <label class="col-sm-3 control-label">ImpressionPixelUrl：</label>
                 <div class="col-sm-5">
-                    <input type="url" name="impPixelUrl" class="form-control" ng-model="item.impPixelUrl" ng-show="item.impPixelUrl" ng-readonly="true">
-                    <label ng-show="!item.impPixelUrl">ID will be available after saving the campaign.</label>
+                    <input type="url" name="impPixelUrl" class="form-control" ng-model="impPixelUrl" ng-show="impPixelUrl" ng-readonly="true">
+                    <label ng-show="!impPixelUrl">ID will be available after saving the campaign.</label>
                 </div>
                 <div class="col-sm-4">
-                    <md-button clipboard class="md-raised copied-btn" ng-show="item.impPixelUrl" text="item.impPixelUrl" ng-click="impPixelUrlClick()">
+                    <md-button clipboard class="md-raised copied-btn" ng-show="impPixelUrl" text="impPixelUrl" ng-click="impPixelUrlClick()">
                         <i class="material-icons">content_copy</i>
                         {{btnWord2}}
                         <!-- Clipboard -->
