--- a/Front/src/tpl/trafficSource-edit-dialog.html
+++ b/Front/src/tpl/trafficSource-edit-dialog.html
@@ -29,7 +29,7 @@
             <div class="form-group">
                 <label class="col-sm-3 control-label">Postback Url：</label>
                 <div class="col-sm-5">
-                    <input type="text" class="form-control" ng-model="item.postbackUrl">
+                    <input my-text="" type="text" class="form-control" ng-model="item.postbackUrl">
                 </div>
             </div>
             <div class="url-tokens-row form-group">
