--- a/Front/src/tpl/offer-edit-dialog.html
+++ b/Front/src/tpl/offer-edit-dialog.html
@@ -20,7 +20,7 @@
             <div class="form-group">
                 <label class="col-sm-3 control-label">Url<span class="star-icon">*</span>：</label>
                 <div class="col-sm-5">
-                    <input type="url" name="url" class="form-control" ng-model="item.url" required>
+                    <input my-text="" type="url" name="url" class="form-control" ng-model="item.url" required>
                     <span style="color:red" ng-show="editForm.url.$dirty && editForm.url.$invalid">
                     <span ng-show="editForm.url.$error.required">Url is required.</span>
                     <span ng-show="editForm.url.$error.url">Url is invalid.</span>
@@ -42,9 +42,9 @@
             <div class="form-group">
                 <label class="col-sm-3 control-label">Country<span class="star-icon">*</span>: </label>
                 <div class="col-sm-5">
-                    <md-select class="cs-subform-select" name="country" ng-model="item.country" required>
+                    <select class="cs-subform-select" name="country" ng-model="item.country" required>
                         <md-option value="{{cou.value}}" ng-repeat="cou in countries">{{cou.display}}</md-option>
-                    </md-select>
+                    </select>
                     <span style="color:red" ng-show="editForm.country.$dirty && editForm.country.$invalid">
                     <span ng-show="editForm.country.$error.required">Country is required.</span>
                     </span>
@@ -53,10 +53,10 @@
             <div class="form-group">
                 <label class="col-sm-3 control-label">Affiliate network: </label>
                 <div class="col-sm-5">
-                    <md-select name="AffiliateNetworkId" class="cs-subform-select" ng-model="affiliateId">
+                    <select name="AffiliateNetworkId" class="cs-subform-select" ng-model="affiliateId">
                         <md-option value=""></md-option>
                         <md-option value="{{affiliate.id}}" ng-repeat="affiliate in affiliates track by $index">{{affiliate.name}}</md-option>
-                    </md-select>
+                    </select>
                 </div>
             </div>
             <div class="form-group">
