--- a/Front/src/tpl/offer-edit-dialog.html
+++ b/Front/src/tpl/offer-edit-dialog.html
@@ -54,7 +54,7 @@
                 <label class="col-sm-3 control-label">Affiliate network: </label>
                 <div class="col-sm-5">
                     <select name="AffiliateNetworkId" class="cs-subform-select" ng-model="affiliateId">
-                        <option value=""></option>
+                        <option value="0"></option>
                         <option value="{{affiliate.id}}" ng-repeat="affiliate in affiliates track by $index">{{affiliate.name}}</option>
                     </select>
                 </div>
