--- a/Front/src/tpl/profile.html
+++ b/Front/src/tpl/profile.html
@@ -1,26 +1,26 @@
 <h1 class="setting-title">Your account data</h1>
 
 <div class="form-column profile-content">
-  <form name="form" class="account-form">
+  <form name="form" class="account-form" ng-submit="accountSave()">
     <div class="basic-form clearfix">
       <div class="col-md-6">
         <div class="form-group">
           <label>First name</label>
-          <input type="text" name="firstname" class="form-control" ng-model="item.firstname" required>
+          <input type="text" name="firstname" class="form-control" ng-model="accountItem.firstname" required>
           <span style="color:red" ng-show="form.firstname.$dirty && form.firstname.$invalid">
           <span ng-show="form.firstname.$error.required">FirstName is required.</span>
           </span>
         </div>
         <div class="form-group">
           <label>Company name</label>
-          <input type="text" name="companyname" class="form-control" ng-model="item.companyname" required>
+          <input type="text" name="companyname" class="form-control" ng-model="accountItem.companyname" required>
           <span style="color:red" ng-show="form.companyname.$dirty && form.companyname.$invalid">
           <span ng-show="form.companyname.$error.required">CompanyName is required.</span>
           </span>
         </div>
         <div class="form-group">
           <label>Default time zone</label>
-          <md-select class="cs-subform-select" ng-model="item.timezone" required>
+          <md-select class="cs-subform-select" ng-model="accountItem.timezone" required>
             <md-option value="1">(UTC-12:00) International Date Line West</md-option>
             <md-option value="2">(UTC-11:00) Coordinated Universal Time-11</md-option>
             <md-option value="3">(UTC-10:00) Hawaii</md-option>
@@ -30,10 +30,10 @@
           <label>Default home screen</label>
           <div class="campaign-radio">
             <label class="radio-inline">
-              <input type="radio" ng-model="item.homescreen" value="Dashboard" selected>Dashboard
+              <input type="radio" ng-model="accountItem.homescreen" value="Dashboard" selected>Dashboard
             </label>
             <label class="radio-inline">
-              <input type="radio" ng-model="item.homescreen" value="Campaign list">Campaign list
+              <input type="radio" ng-model="accountItem.homescreen" value="Campaign list">Campaign list
             </label>
           </div>
         </div>
@@ -41,10 +41,10 @@
           <label>Conversion registration time reporting</label>
           <div class="campaign-radio">
             <label class="radio-inline">
-              <input type="radio" ng-model="item.visitconversion" value="Visit" selected>Visit
+              <input type="radio" ng-model="accountItem.visitconversion" value="Visit" selected>Visit
             </label>
             <label class="radio-inline">
-              <input type="radio" ng-model="item.visitconversion" value="Conversion">Conversion
+              <input type="radio" ng-model="accountItem.visitconversion" value="Conversion">Conversion
             </label>
           </div>
         </div>
@@ -52,14 +52,14 @@
       <div class="col-md-6">
         <div class="form-group">
           <label>Last name</label>
-          <input type="text" name="lastname" class="form-control" ng-model="item.lastname" required>
+          <input type="text" name="lastname" class="form-control" ng-model="accountItem.lastname" required>
           <span style="color:red" ng-show="form.lastname.$dirty && form.lastname.$invalid">
           <span ng-show="form.lastname.$error.required">LastName is required.</span>
           </span>
         </div>
         <div class="form-group">
           <label>Phone</label>
-          <input type="tel" name="tel" class="form-control" ng-model="item.tel" ng-pattern="phoneNumbr" maxlength="11" minlength="11" required>
+          <input type="tel" name="tel" class="form-control" ng-model="accountItem.tel" ng-pattern="phoneNumbr" maxlength="11" minlength="11" required>
           <span style="color:red" ng-show="form.tel.$dirty && form.tel.$invalid">
           <span ng-show="form.tel.$error.required">Tel is required.</span>
           <span ng-show="form.tel.$error.pattern">Please enter phone number</span>
@@ -68,14 +68,10 @@
       </div>
     </div>
     <div class="profile-form-footer clearfix">
-      <div class="save-btn" ng-click="accountSave()">
+      <md-button class="save-btn" ng-click="accountSave()" ng-disabled="form.$invalid">
         <i class="material-icons save-btn-icon">done</i>
         save
-      </div>
-<!--       <div class="close-btn">
-        <i class="material-icons close-btn-icon">close</i>
-        close
-      </div> -->
+      </md-button>
     </div>
   </form>
 </div>
@@ -84,65 +80,56 @@
 
 <div class="form-column profile-content password-change">
   <div class="basic-form clearfix">
-  <form name="passwordForm">
+  <form name="passwordForm" ng-submit="passwordUpdateSave()">
     <div class="col-md-6">
       <div class="form-group">
         <label>Old password</label>
-        <input type="password" name="password" class="form-control" ng-model="item.password" required>
+        <input type="password" name="password" class="form-control" ng-model="passwordItem.password" required>
         <span style="color:red" ng-show="passwordForm.password.$dirty && passwordForm.password.$invalid">
           <span ng-show="passwordForm.password.$error.required">FirstName is required.</span>
         </span>
       </div>
       <div class="form-group">
         <label for="newPassword">New password</label>
-        <input type="password" name="newPassword" class="form-control" ng-model="item.newPassword" required>
+        <input type="password" name="newPassword" class="form-control" ng-model="passwordItem.newPassword" required>
         <span style="color:red" ng-show="passwordForm.newPassword.$dirty && passwordForm.newPassword.$invalid">
           <span ng-show="passwordForm.newPassword.$error.required">FirstName is required.</span>
         </span>
       </div>
       <div class="form-group">
         <label for="repeatNewPassword">Repeat new password</label>
-        <input type="password" name="repeatNewPassword" class="form-control" ng-model="item.repeatNewPassword" required>
+        <input type="password" name="repeatNewPassword" class="form-control" ng-model="passwordItem.repeatNewPassword" required>
         <span style="color:red" ng-show="passwordForm.repeatNewPassword.$dirty && passwordForm.repeatNewPassword.$invalid">
           <span ng-show="passwordForm.repeatNewPassword.$error.required">FirstName is required.</span>
-          
         </span>
-        <span style="color: red;" ng-show="item.newPassword!=item.repeatNewPassword">*Password is not the same</span>
+        <span style="color: red;" ng-show="passwordItem.newPassword!=passwordItem.repeatNewPassword">*Password is not the same</span>
       </div>
       <div class="profile-form-footer clearfix">
-        <div class="save-btn">
+        <md-button class="save-btn" ng-click="passwordUpdateSave()" ng-disabled="passwordForm.$invalid">
           <i class="material-icons save-btn-icon">done</i>
           save
-        </div>
-<!--         <div class="close-btn">
-          <i class="material-icons close-btn-icon">close</i>
-          close
-        </div> -->
+        </md-button>
       </div>
     </div>
   </form>
-  <form name="emailForm">
+  <form name="emailForm" ng-submit="emailUpdateSave()">
     <div class="col-md-6">
       <div class="form-group">
         <label>Change e-mail address</label>
-        <input type="email" placeholder="Email" class="form-control no-border" ng-model="item.email" required>
+        <input type="email" placeholder="Email" class="form-control no-border" ng-model="emailItem.emailaddress" required>
       </div>
       <div class="form-group">
         <label>Confirm with your password</label>
-        <input type="password" name="password" class="form-control" ng-model="item.passwordNew" required>
+        <input type="password" name="password" class="form-control" ng-model="emailItem.password" required>
         <span style="color:red" ng-show="emailForm.password.$dirty && emailForm.password.$invalid">
           <span ng-show="emailForm.password.$error.required">FirstName is required.</span>
         </span>
       </div>
       <div class="profile-form-footer clearfix">
-        <div class="save-btn">
+        <md-button class="save-btn" ng-click="emailUpdateSave()" ng-disabled="emailForm.$invalid"> 
           <i class="material-icons save-btn-icon">done</i>
           save
-        </div>
-<!--         <div class="close-btn">
-          <i class="material-icons close-btn-icon">close</i>
-          close
-        </div> -->
+        </md-button>
       </div>
     </div>
   </form>
