edit campaign traffic postbackurl and pixelredirectUrl

--- a/Front/src/tpl/campaign-edit-dialog.html
+++ b/Front/src/tpl/campaign-edit-dialog.html
@@ -141,13 +141,13 @@
                     <div class="form-group">
                         <label class="col-sm-3 control-label">Postback URL：</label>
                         <div class="col-sm-5">
-                            <input type="text" class="form-control" ng-model="item.postbackUrl">
+                            <input type="text" class="form-control" ng-model="trafficPostbackUrl" ng-readonly="true">
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-sm-3 control-label">Pixel redirect URL：</label>
                         <div class="col-sm-5">
-                            <input type="text" class="form-control" ng-model="item.pixelRedirectUrl">
+                            <input type="text" class="form-control" ng-model="trafficPixelRedirectUrl" ng-readonly="true">
                         </div>
                     </div>
                 </div>
