campaign update traffic url

--- a/Front/src/tpl/trafficSource-template-dialog.html
+++ b/Front/src/tpl/trafficSource-template-dialog.html
@@ -1,4 +1,4 @@
-<md-dialog class="cs-edit-dialog" ng-cloak>
+<md-dialog class="cs-edit-dialog traffic-source-template-dialog" ng-cloak>
   <md-toolbar>
     <div class="md-toolbar-tools">
       <h2 class="md-title">{{ctrl.title | translate}}</h2>
