setting dialog update

--- a/Front/src/tpl/invoices.html
+++ b/Front/src/tpl/invoices.html
@@ -8,7 +8,7 @@
 				<h1>PayPal</h1>
 				<span>286005051@qq.com</span>
 				<div class="plan-btn">
-	      			<md-button class="md-raised copy-btn">Update</md-button>
+	      			<md-button class="md-raised copy-btn" ng-click="editInvoices()">Update</md-button>
 	    		</div>
 			</div>
     </div>
